--- a/conf/odoo.conf
+++ b/conf/odoo.conf
@@ -1,5 +1,5 @@
 [options]
-addons_path = /home/azizbeco/Desktop/Oddo Homework/odoo/addons,/home/azizbeco/Desktop/Oddo Homework/odoo/odoo/addons
+addons_path = /home/azizbeco/Desktop/Oddo Homework/odoo/addons,/home/azizbeco/Desktop/Oddo Homework/odoo/odoo/addons,src
 admin_passwd = admin
 csv_internal_sep = ,
 data_dir = /home/azizbeco/.local/share/Odoo
